--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,12 +20,12 @@ node {
     }
 
     stage('test with a DB') {
-	def mysql = docker.image('mysql').run("-e MYSQL_ALLOW_EMPTY_PASSWORD=YES --rm")
-	def myTestContainer = docker.image('node:4.6')
-	myTestContainer.pull()
-	myTestContainer.inside("--link ${mysql.id}:mysql") {
-	  sh 'npm install --only=dev'
-	  sh 'npm test'
+	// def mysql = docker.image('mysql').run("-e MYSQL_ALLOW_EMPTY_PASSWORD=YES --rm")
+	// def myTestContainer = docker.image('node:4.6')
+	// myTestContainer.pull()
+	// myTestContainer.inside("--link ${mysql.id}:mysql") {
+	//   sh 'npm install --only=dev'
+	//   sh 'npm test'
 	}
     }
 
